# negotiations_trainer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
docs/: block-scheme.puml  ml_system_design_doc.md
docs/cases/abc/: description.md
docs/cases/sales/: buyer_pain_points.md  buyer_profile.md  description.md  negotiations_example.md  negotiations_scheme.md  sales_profile.md
docs/schemes/: architecture.puml  negotiations_protocol.puml
multiagents_core/: Dockerfile  main.py  pyproject.toml
multiagents_core/multiagents_simulator/: coalition_negotiations_manager.py  negotiations_manager.py  one_on_one_negotiations_manager.py
multiagents_core/multiagents_simulator/cases/: abc.json  sales.json  sales_context.txt
multiagents_core/multiagents_simulator/prompts/: base.py
telegram/: Dockerfile  main.py  pyproject.toml
