[tool.poetry]
name = "negotiations-trainer"
version = "0.1.0"
description = ""
authors = ["MakArtKar <makoyan2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 88  # Match Black's default
select = ["E", "F", "W"]  # Linting rules to enable
ignore = ["E501"]  # Ignore specific rules
exclude = ["migrations/", "venv/"]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
